src/objects/MIBNF_Component__c.object
<CustomObject>
    <fields>
        <fullName>Total_BNF_Processing_Time__c</fullName>
        <description>Time starts from when opp moves to stage 6a or BNF creation, whichever occurs more recently</description>
        <formula>NULLVALUE(Sales_Processing_Time__c,0)+ NULLVALUE(LO_Processing_Time__c,0)+ NULLVALUE(RA_Processing_Time__c,0)+ NULLVALUE(SAP_Processing_Time__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time starts from when opp moves to stage 6a or BNF creation, whichever occurs more recently</inlineHelpText>
        <label>Time from 6a or BNF Creation to SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Amount__c</fullName>
        <label>Travel Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urgent_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked this indicates that the BNF should be prioritized by assigned RA</description>
        <inlineHelpText>When ticked this indicates that the BNF should be prioritized by assigned RA</inlineHelpText>
        <label>Urgent Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Copy_Local__c</fullName>
        <formula>X2nd_Copy__r.International_Name__c</formula>
        <label>2nd Copy (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Copy_SAP_Base_Code__c</fullName>
        <formula>X2nd_Copy__r.SAP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Copy SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Copy_SAP_Contact_Local__c</fullName>
        <formula>X2nd_Copy_SAP_Contact__r.Last_Name_Local__c + &quot; &quot; + X2nd_Copy_SAP_Contact__r.First_Name_Local__c</formula>
        <label>2nd Copy SAP Contact (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Copy_SAP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Copy SAP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Contact__c</referenceTo>
        <relationshipLabel>BNF&apos;s (2nd Copy SAP Contact)</relationshipLabel>
        <relationshipName>MIBNF_Components_s6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Copy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (2nd Copy)</relationshipLabel>
        <relationshipName>MIBNF_Components_s4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BNF</label>
    <nameField>
        <label>BNF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BNF&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BNF_VR01_CRM_Duplicate_BNF_Name</fullName>
        <active>true</active>
        <description>CRM-MC-ESPSFDCQI-4090</description>
        <errorConditionFormula>AND(ISNEW(),Name = VLOOKUP( $ObjectType.MIBNF_Component__c.Fields.Name , $ObjectType.MIBNF_Component__c.Fields.Name, Name))</errorConditionFormula>
        <errorMessage>Duplicate BNF Name Found</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BNF_VR02_CRM_PO_Number_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c), MIBNF__r.Opportunity__r.Account.PO_Number__c ,LEN(Client_PO_Number__c)=0)</errorConditionFormula>
        <errorDisplayField>Client_PO_Number__c</errorDisplayField>
        <errorMessage>You must enter Client PO Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BNF_VR03_CRM_Restrict_Edit_Access</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
!$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c,
!ISBLANK(Legacy_ID__c),
ISPICKVAL(BNF_Status__c , &quot;SAP Contract Confirmed&quot;)
)</errorConditionFormula>
        <errorMessage>You cannot edit an Approved MIBNF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BNF_VR04_CRM_PassThruScheduleRequired</fullName>
        <active>true</active>
        <description>ESPSFDCQI-13477/ESPSFDCQI-14331</description>
        <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Travel_Amount__c),
        ISCHANGED(Accomodation_Amount__c),
        ISCHANGED(Sub_Contractor_Amount__c),
        ISCHANGED(Hono__c),
        ISCHANGED(Pass_thru_schedules__c)
    ),
OR(
!ISBLANK(Travel_Amount__c),
!ISBLANK(Accomodation_Amount__c),
!ISBLANK(Sub_Contractor_Amount__c),
!ISBLANK(Hono__c)
),
ISPICKVAL(Pass_thru_schedules__c,&quot;&quot;),
!$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c
)</errorConditionFormula>
        <errorDisplayField>Pass_thru_schedules__c</errorDisplayField>
        <errorMessage>Please fill in Pass thru schedule field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BNF_VR05_CRM_RetainerOpptyNumberRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Retainer_Data_Value__c &lt; 0,
ISBLANK(Retainer_Opportunity_Number__c),
!$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c
)</errorConditionFormula>
        <errorDisplayField>Retainer_Opportunity_Number__c</errorDisplayField>
        <errorMessage>Retainer Opportunity Number is required when Retainer/Down Payment Data Value has negative amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_revised_BNF_date_mandatory</fullName>
        <active>true</active>
        <description>Revised BNF date is mandatory for revised BNF&apos;s</description>
        <errorConditionFormula>AND( Addendum__c ,isnull( Revised_BNF_Date__c ))</errorConditionFormula>
        <errorDisplayField>Revised_BNF_Date__c</errorDisplayField>
        <errorMessage>Revised BNF date is mandatory for revised BNF&apos;s</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_Contract_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(SAP_Contract__c )&gt;0&amp;&amp;(LEN(SAP_Contract__c ) != 10 || !ISNUMBER(SAP_Contract__c))</errorConditionFormula>
        <errorDisplayField>SAP_Contract__c</errorDisplayField>
        <errorMessage>You must enter a valid 10 digit SAP contract number</errorMessage>
    </validationRules>
</CustomObject>